add inter cut video ad  function;